Closed
Bug 281834
Opened 21 years ago
Closed 21 years ago
--enable-cpp-rtti builds broken on FC3
Categories
(Core :: XPCOM, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8beta1
People
(Reporter: Biesinger, Assigned: Biesinger)
Details
(Keywords: regression)
Attachments
(1 file)
|
1.66 KB,
patch
|
bryner
:
review+
darin.moz
:
superreview+
asa
:
approval1.8b+
|
Details | Diff | Splinter Review |
xpcom/reflect has wrong defines for XPTC_EXPORT on linux when used with FC3's
gcc. this means that typeinfo for nsXPTCStubBase is not exported, which causes
unresolved symbols at runtime.
| Assignee | ||
Comment 1•21 years ago
|
||
Attachment #173978 -
Flags: review?(bryner)
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8beta1
Comment 2•21 years ago
|
||
Comment on attachment 173978 [details] [diff] [review]
patch
Oops, I thought this was committed some time ago.
Attachment #173978 -
Flags: review?(bryner) → review+
| Assignee | ||
Updated•21 years ago
|
Attachment #173978 -
Flags: superreview?(darin)
Comment 3•21 years ago
|
||
Comment on attachment 173978 [details] [diff] [review]
patch
This change ends up causing XPConnect crashes on win32 because the NS_EXPORT
macro sets declspec(stdcall) on Windows (incorrectly, IMO, but changing it
requires more investigation). This is a problem because the assembly
implementation of XPTC_InvokeByIndex does not pop the arguments which a
|stdcall| function must do.
Attachment #173978 -
Flags: review+ → review-
| Assignee | ||
Comment 4•21 years ago
|
||
Comment on attachment 173978 [details] [diff] [review]
patch
hm, really? http://lxr.mozilla.org/seamonkey/source/xpcom/base/nscore.h#163
does not look like it does; it does only for the NS_EXPORT_(t) variant which I
don't use... (and which I avoided because it sets stdcall)
Attachment #173978 -
Flags: review- → review?(bryner)
Comment 5•21 years ago
|
||
Comment on attachment 173978 [details] [diff] [review]
patch
Ah, you're right, I was testing a slightly different patch.
Attachment #173978 -
Flags: review?(bryner) → review+
Comment 6•21 years ago
|
||
Comment on attachment 173978 [details] [diff] [review]
patch
rs=darin
Attachment #173978 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 7•21 years ago
|
||
Comment on attachment 173978 [details] [diff] [review]
patch
this should be a low risk patch... it only marks some more stuff as exported
Attachment #173978 -
Flags: approval1.8b?
Comment 8•21 years ago
|
||
Comment on attachment 173978 [details] [diff] [review]
patch
a=asa for checkin to 1.8b
Attachment #173978 -
Flags: approval1.8b? → approval1.8b+
| Assignee | ||
Comment 9•21 years ago
|
||
Checking in xpcom/reflect/xptcall/public/xptcall.h;
/cvsroot/mozilla/xpcom/reflect/xptcall/public/xptcall.h,v <-- xptcall.h
new revision: 1.26; previous revision: 1.25
done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•