Bug 281834 define XPTC_EXPORT correctly for non-windows platforms r=bryner rs=darin a=asa